# efs-zeropilot-4.0

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: hw_compile_test.yaml  lib_compile_test.yaml  linting_test.yaml  sitl_build_test.yaml  (+1 more)
docker/: Dockerfile  build-stm32h753iitx.sh  build-stm32l552xx.sh
stm32h753iitx/: .cproject  .mxproject  .project  STM32H753IITX_FLASH.ld  STM32H753IITX_RAM.ld  stm32h753iitx.cmake  stm32h753iitx.ioc
stm32l552xx/: .cproject  .mxproject  .project  stm32l552xx.cmake  stm32l552xx.ioc
zeropilot4.0/: .clang-tidy  CMakeLists.txt  common.cmake  hwbuild.bash  lint.bash
zeropilot4.0/tests/: CMakeLists.txt  testbuild.bash
zeropilot4.0/tests/attitude_manager/: 21001_attitude_manager_test.cpp  21002_pid_test.cpp  21003_direct_mapping_test.cpp  attitude_manager_fw_test.cpp  attitude_manager_plane_test.cpp  attitude_manager_quad_test.cpp  attitude_manager_telemetry_test.cpp  attitude_manager_test.cpp  direct_mapping_test.cpp  fbwa_mapping_test.cpp  pid_test.cpp
zeropilot4.0/tests/driver_mocks/: filesystem_mock.hpp  mock_barometer.hpp  mock_buzzer.hpp  mock_can.hpp  mock_can_controller.hpp  mock_fft.hpp  mock_filesystem.hpp  mock_filesystem_backend.hpp  mock_imu.hpp  mock_killswitch.hpp  mock_led.hpp  mock_logger.hpp  mock_m10_accessory.hpp  mock_mathutils.hpp  mock_motor.hpp  mock_power_module.hpp  mock_rangefinder.hpp  mock_safety_switch.hpp  mock_systemutils.hpp  mock_telemlink.hpp  mock_textio.hpp
zeropilot4.0/tests/exmem_manager/: exmem_manager_test.cpp
zeropilot4.0/tests/system_manager/: 11001_system_manager_test.cpp  system_manager_test.cpp
zeropilot4.0/tests/telemetry_manager/: 31001_telemetry_manager_test.cpp  telemetry_manager_test.cpp
zeropilot4.0/tests/test_support/: mavlink.h
zp_sitl/: .gitignore  README.md  build_sitl.sh  button_testing.py  index.html  mavlink_decoder.py  requirements.txt  setup.py  sitl_fgfs.py  sitl_main.py  sitl_plane_fgfs.py  sitl_plane_jsbsim.py  sitl_quad_airsim.py  zeropilot_wrapper.cpp  zeropilot_wrapper_BACKUP_63237.cpp  zeropilot_wrapper_BASE_63237.cpp  zeropilot_wrapper_LOCAL_63237.cpp
(+1047 files in other folders)
